--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
     </properties>
 
     <dependencies>
+        <!-- junit包 -->
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
